# skema-gateway

./: .gitignore  LICENSE.md  pyproject.toml
db/migrations/local/: 001_init.sql  002_operator_profiles.sql  003_audit_upstream_name.sql
db/migrations/parallax/: 001_mcp_client_tokens_operator_columns.sql  002_local_backup.sql
db/migrations/privatae/: 001_machine_anchors.sql
gatewayd/: __init__.py  __main__.py  audit.py  backup.py  check.py  config.py  db.py  installer.py  mcp.py  restore.py  serialize.py  wallpaper.py
gatewayd/crypto/: __init__.py  aead.py  envelope.py  kdf.py
gatewayd/dashboard/: routes.py
gatewayd/dashboard/static/: app.js  index.html  style.css
gatewayd/transport/: anchor.py  fingerprint.py  mtls.py
tests/: README.md  test_operator_rename.py  test_tiles_routes.py  test_upstream_registry.py
tests/crypto/: test_key_hierarchy.py
tests/integration/: run.sh  test_backup_restore.py  test_full_flow.py  test_mcp_pipeline.py
tests/migrations/: docker-compose.yml  run.sh
tests/migrations/fixtures/: parallax-seed.sql  privatae-seed.sql
tools/dev-stack/: docker-compose.yml
tools/dev_edge/: __init__.py  ca.py  server.py
