[project]
name = "skema-gateway"
version = "0.1.0"
description = "Local-safe gateway daemon between operator clients and the user's hosted Skema container."
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=41.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
gatewayd = "gatewayd.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gatewayd*"]
